--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -8,4 +8,5 @@ repositories{
 dependencies {
     compile 'org.testng:testng:6.9.10'
     compile 'org.seleniumhq.selenium:selenium-java:3.0.0-beta1'
+    compile 'org.seleniumhq.selenium:selenium-firefox-driver:3.0.0-beta1'
 }
